Issue #3098.Change vertical alignment

--- a/src/FDC/EventMobileBundle/Resources/public/css/jury_custom.css
+++ b/src/FDC/EventMobileBundle/Resources/public/css/jury_custom.css
@@ -1,10 +1,3 @@
-#main.articles .selection-item .jury-info {
-    height: 90px;
-    padding-bottom: 55px;
-}
-#main.articles .selection-item .jury-info .vCenterKid {
-    vertical-align: bottom;
-}
 #main.articles .selection-item .jury-info .name {
-    padding-top: 0;
+    padding-top: 15px;
 }
